@@ -1,0 +1,30 @@
+/*
+ *  Ucfunids.h - Classes of Usecode function #'s.
+ *
+ *  Copyright (C) 2005  The Exult Team
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+ */
+
+#ifndef _UCFUNIDS_H
+#define _UCFUNIDS_H
+
+/*	The shapes with #'s < 0x400 have fun. # == shape #.  Those past are
+ *	given #'s starting at 0x1000.
+ */
+#define UC_HIGHSHAPES	0x1000
+#define UC_SHAPEFUN(n)	((n) < 0x400 ? (n) : UC_HIGHSHAPES + ((n) - 0x400))
+
+#endif
